# ray-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
ray_cli/: app.py  cli.py
ray_cli/dispatchers/: sacn_dispatcher.py
ray_cli/modes/: __init__.py  generators.py  mode.py
ray_cli/sacn/: __init__.py  dispatcher.py
ray_cli/utils/: __init__.py  feedback.py
tests/: test_generators.py
tests/integration/: test_integration.py
tests/scripts/: test_versions_are_in_sync.py
tests/unittests/: test_cli.py
